--- a/Todoey/Base.lproj/Main.storyboard
+++ b/Todoey/Base.lproj/Main.storyboard
@@ -32,7 +32,14 @@
                             <outlet property="delegate" destination="mDa-f8-YDq" id="lbY-Ml-kng"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Todoey" id="VX1-aE-dgH"/>
+                    <navigationItem key="navigationItem" title="Todoey" id="VX1-aE-dgH">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="6y0-0Y-GaL">
+                            <color key="tintColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <connections>
+                                <action selector="addButtonPressed:" destination="mDa-f8-YDq" id="XnC-R3-1UJ"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="a5F-pW-wbx" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
